--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
+    "@supabase/supabase-js": "^2.86.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^10.0.0",
     "framer-motion": "^12.23.24",
